# CVForge.ai

./: README.md
Agent/: .dockerignore  .env.example  .gitignore  AGENT_README.md  Dockerfile  README.md  app.py  chat_app.py  cli_chat.py  config.py  conversation_backup.pkl  llm_client.py  pyproject.toml  requirements.txt  resume_agent.py  schemas.py
Agent/modules/: __init__.py  embedding.py  generation.py  scoring.py
backend/: package-lock.json  package.json  server.js
backend/Routes/: JobRoutes.js  SocialConnectRoutes.js  UserRoutes.js
backend/controllers/: JobController.js  ResumeController.js  SocialConnectController.js  auth.js
backend/db/: db.js
backend/middleware/: auth.js
backend/models/: auth_user.js  job.js  profiles.models.js  social_connect.js
frontend/: .dockerignore  Dockerfile  RESUME_BUILDER_API.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/company_dashboard/: joblist.jsx  newjobmodal.jsx  welcome.jsx
frontend/src/components/dashboard/: welcome.jsx
frontend/src/components/job/: job.jsx
frontend/src/components/landing/: Footer.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx  Testimonials.jsx
frontend/src/components/login/: login.jsx
frontend/src/components/protected/: protected-routes.jsx
frontend/src/components/register/: register.jsx
frontend/src/components/resume_builder/: ResumeLoadingSpinner.jsx  TemplateCard.jsx  chatwindow.jsx  live.jsx  planningphase.jsx  (+3 more)
frontend/src/lib/: formatter.js
frontend/src/pages/: company-dashboard.jsx  resume-builder.jsx
(+4 files in other folders)
